# verdict-protocol-v2.1

./: .gitignore  Anchor.toml  README.md  README.md.save  ROADMAP.md  package.json  run-tests.sh
docs/: API.md  DEPLOYMENT_eng.md  TESTING_eng.md
frontend/: README.md  next.config.ts  package-lock.json  package.json  test_withdraw.js  test_withdraw2.js  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/creator/[wallet]/: route.ts
frontend/app/api/markets/: route.ts
frontend/app/api/markets/[id]/: route.ts
frontend/app/components/: CreateMarket.tsx  LanguageSwitcher.tsx  MarketCard.tsx  MarketDetail.tsx  Navbar.tsx  Portfolio.tsx  VerdictApp.tsx  WalletProvider.tsx
frontend/app/components/ui/: ConnectWalletPlaceholder.tsx  StatusBanner.tsx
frontend/app/hooks/: useVerdict.ts
frontend/app/idl/: index.ts  verdict.json
frontend/app/lib/: constants.ts  market-utils.ts  pda.ts
frontend/app/lib/__tests__/: market-utils.test.ts  pda.test.ts
frontend/i18n/: request.ts
frontend/messages/: en.json  es.json  fr.json  ru.json  sr.json
programs/verdict/: Cargo.toml
programs/verdict/src/: errors.rs  lib.rs
programs/verdict/src/instructions/: buy_shares.rs  claim_winnings.rs  create_market.rs  mod.rs  resolve_market.rs  withdraw_protocol_fees.rs
programs/verdict/src/state/: market.rs  mod.rs  user_position.rs
tests/: bug-fixes.ts  coverage-gaps.ts  exploit-test.ts  invariants.ts  verdict.ts
tests/fixtures/: admin.json
