[package]
name = "verdict"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "verdict"

[features]
default = []
# Test-only: overrides PROTOCOL_ADMIN to the local test wallet so the admin-path
# tests (resolve by admin, withdraw_protocol_fees) can run on localnet. Never enable
# for production / devnet builds — production keeps the hardcoded PROTOCOL_ADMIN.
local-admin = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
